less/layout.less
/** Main layout **/
html, body {
  position: relative;
  height: 100%;
}
@topbar-height: 50px;
@bottombar-height: 50px;
body {
  /* padding top by top bar height */
  padding-top: @topbar-height;
}

.navbar-nav {
  // keep margin and padding the same as for media width > @screen-sm-min
  margin: 0;
  > li > a {
    padding-top: 15px;
    padding-bottom: 15px;
  }
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: @bottombar-height;
}

#main-container {
  height: 100%;
  position: relative;
}

#map {
  width: auto;
  height: 100%;
  overflow: hidden;
  background-color: #dfdfdf;
  position: relative;
}

#sidebar {
  display: block;
  width: 300px;
  height: 100%;
  max-width: 100%;
  float: left;
  .transition(all 300ms ease-out 0s);
  position: relative;
}

#sidebar.open {
  margin-left: 0;
}

@media (min-width: @screen-sm-min) {
  #sidebar {
    margin-left: -300px;
  }
}
@media (max-width: @screen-xs-max) {
  #sidebar {
    margin-left: -100%;
    width: 100%;
  }
}

@media (min-width: @screen-sm-min) {
  body {
    /* padding bottom by footer height */
    padding-bottom: @bottombar-height;
  }
}
@media (max-width: @screen-xs-max) {
  body {
    padding-bottom: 0;
    padding-top: 40px;
    overflow: hidden;
  }
  #sidebar {
    width: 100%;
    position: absolute;
    z-index: 2;
  }
  .footer {
    position: absolute;
    height: 0;
    bottom: 0;
  }
}

